--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,23 @@
 			<artifactId>md5</artifactId>
 			<version>2.2.1</version>
 		</dependency>
-
+		<!--springboot tomcat jsp 支持开启-->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>provided</scope>
+			<!--optional我没弄明白，都说必须为true，但我测试true，false，不加都可以-->
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
