--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,17 @@
 spring:
     datasource:
-          url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
+          url: jdbc:mysql://localhost:3306/party?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
           username: root
           password: 123456
           driver-class-name: com.mysql.jdbc.Driver
-          type: com.alibaba.druid.pool.DruidDataSource
+
     mvc:
       view:
-        prefix: /
-        suffix: .html
+       prefix: /WEB-INF/jsp/
+       suffix: .jsp
     thymeleaf:
       cache: false
+      enabled: false
     mail:
       host: smtp.qq.com
       username: 289488132@qq.com
