--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,12 @@ spring:
           username: root
           password: 123456
           driver-class-name: com.mysql.jdbc.Driver
-
+    activemq:
+        broker-url: tcp://192.168.30.131:61616
+        user: admin
+        password: admin
+        pool:
+          enabled: false
     mvc:
       view:
        prefix: /WEB-INF/jsp/
@@ -25,3 +30,12 @@ spring:
           required:true
 server:
   port: 8888
+  redis:
+      database: 0
+      host: 127.0.0.1
+      port: 6379
+      pool:
+        max-active: 8
+        max-wait: 1
+        max-idle: 8
+        timeout: 0
