--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
 			<artifactId>activemq-pool</artifactId>
 			 <version>5.7.0</version>
 		</dependency>
+		<!-- fastjson json处理工具 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.46</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
